<?xml version="1.0"?>
<package format="2">
  <name>ros_esdcan_bridge</name>
  <version>1.0.0</version>
  <description>The ros_esdcan_bridge package</description>

  <maintainer email="610139231@qq.com">saki-chen</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>can_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>can_msgs</build_export_depend>
</package>
